# Demo-GitWorkflow

./: .env  Dockerfile  compose.yaml  pyproject.toml  requirement.txt
.github/workflows/: docker_updater.yaml
Models/: Editor
data/db/: LoadedFiles.pkl  chroma.sqlite3
src/: main.py
src/Agent/: Agentutils.py  AgntEditor.py  AgntResearcher.py  AgntWriter.py  _VectDB.py
src/data/db/: chroma.sqlite3
